--- a/app.html
+++ b/app.html
@@ -1,162 +1,301 @@
 <!doctype html>
-<html lang="pt-BR">
+<html lang="pt-BR" data-theme="dark">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Romaneio • Login</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Romaneio • Painel</title>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+  <meta http-equiv="Pragma" content="no-cache"/>
+  <meta http-equiv="Expires" content="0"/>
   <style>
     :root{
-      --bg:#0b1320; --card:#121b2e; --muted:#7b8aa1; --text:#eaf1ff;
-      --primary:#4c8dff; --primary-600:#3a74d6; --success:#19c37d; --danger:#ff6b6b;
-      --shadow:0 18px 40px rgba(0,0,0,.35);
+      --bg:#0f172a; --card:#0b1220; --text:#e5e7eb; --muted:#94a3b8;
+      --primary:#2563eb; --danger:#ef4444; --ok:#16a34a; --chip:#111827; --bar:#60a5fa;
+      --line:#1f2937;
+    }
+    [data-theme="light"]{
+      --bg:#f8fafc; --card:#ffffff; --text:#0f172a; --muted:#475569;
+      --primary:#1d4ed8; --danger:#dc2626; --ok:#16a34a; --chip:#eef2ff; --bar:#3b82f6;
+      --line:#e5e7eb;
     }
     *{box-sizing:border-box} html,body{height:100%}
-    body{
-      margin:0; font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial;
-      background:linear-gradient(180deg,#0b1320 0%, #0d1528 100%); color:var(--text);
-      display:flex; align-items:center; justify-content:center; padding:24px;
-    }
-    .wrap{width:100%; max-width:560px}
-    .row-top{display:flex; gap:10px; justify-content:flex-end; margin-bottom:14px}
-    .btn{
-      appearance:none; border:0; border-radius:12px; padding:10px 14px;
-      background:#1a2340; color:#dfe8ff; cursor:pointer; box-shadow:var(--shadow);
-      display:inline-flex; align-items:center; gap:8px; font-weight:600
-    }
-    .btn:hover{filter:brightness(1.06)}
-    .btn-primary{background:var(--primary)}
-    .card{
-      background:var(--card); border:1px solid rgba(255,255,255,.06);
-      border-radius:18px; padding:26px; box-shadow:var(--shadow);
-    }
-    h1{margin:0 0 10px; font-size:28px; display:flex; gap:10px; align-items:center}
-    .muted{color:var(--muted); font-size:14px}
-    .fld{display:flex; flex-direction:column; gap:6px; margin-top:14px}
-    .fld input{
-      background:#0f1729; color:var(--text); border:1px solid rgba(255,255,255,.08);
-      border-radius:12px; padding:12px 14px; font-size:16px; outline:none
-    }
-    .row{display:flex; gap:10px; margin-top:16px}
-    .row .btn{flex:1}
-    .ok{color:var(--success)} .err{color:var(--danger)}
-    .ver{margin-top:8px; color:#8aa4ff; font-size:12px}
-    /* progress */
-    .progress{height:4px; width:100%; background:#0f1729; border-radius:999px; overflow:hidden; margin:14px 0 4px}
-    .bar{height:100%; width:0%; background:linear-gradient(90deg,#63a4ff,#4c8dff); transition:width .2s}
+    body{margin:0;background:var(--bg);color:var(--text);font:16px/1.4 system-ui,-apple-system,Segoe UI,Roboto}
+    header{position:sticky;top:0;background:var(--card);border-bottom:1px solid var(--line);display:flex;gap:14px;align-items:center;justify-content:space-between;padding:12px 18px;z-index:10}
+    nav a{color:var(--text);text-decoration:none;padding:10px 14px;border-radius:999px;background:var(--chip);border:1px solid var(--line)}
+    nav{display:flex;gap:8px;flex-wrap:wrap}
+    .theme{background:transparent;border:1px solid var(--line);color:var(--text);padding:8px 10px;border-radius:10px;cursor:pointer}
+    .container{max-width:1100px;margin:18px auto;padding:0 16px}
+    .card{background:var(--card);border:1px solid var(--line);border-radius:16px;padding:16px}
+    h2{margin:0 0 12px}
+    select,input[type=text],input[type=number],input[type=date],textarea{width:100%;padding:10px 12px;border:1px solid var(--line);background:transparent;border-radius:10px;color:var(--text)}
+    .grid{display:grid;grid-template-columns:1fr 1fr 1fr 80px;gap:10px;align-items:center}
+    .btn{cursor:pointer;border:0;border-radius:10px;padding:10px 14px;font-weight:600}
+    .btn-primary{background:var(--primary);color:#fff}
+    .btn-ghost{background:transparent;color:var(--text);border:1px solid var(--line)}
+    .btn-danger{background:var(--danger);color:#fff}
+    .row{display:flex;gap:10px;flex-wrap:wrap;align-items:center}
+    .muted{color:var(--muted)}
+    .thumbs{display:flex;gap:8px;flex-wrap:wrap;margin-top:10px}
+    .thumb{position:relative}
+    .thumb img{width:84px;height:84px;object-fit:cover;border-radius:8px;border:1px solid var(--line)}
+    .thumb button{position:absolute;top:-8px;right:-8px;width:22px;height:22px;border-radius:50%;border:0;background:var(--danger);color:#fff;cursor:pointer}
+    .msg{margin-top:10px;padding:10px;border-radius:10px}
+    .ok{background:#064e3b;color:#a7f3d0}
+    .err{background:#7f1d1d;color:#fecaca}
+    .topbar{position:fixed;inset:0 0 auto 0;height:3px;background:transparent;z-index:20}
+    .bar{height:100%;width:0;background:var(--bar);transition:width .2s linear}
+    .section{margin-bottom:16px}
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="row-top">
-      <button id="btnTheme" class="btn" title="Tema">🌙/🌞</button>
-      <button id="btnReload" class="btn" title="Forçar atualização">⟳ Atualizar</button>
+  <div class="topbar"><div id="bar" class="bar"></div></div>
+
+  <header>
+    <div class="row">
+      <strong>🚚 Romaneio</strong>
+      <span id="who" class="muted"></span>
     </div>
+    <nav class="row">
+      <a href="#rom" id="mRom">Enviar Romaneio</a>
+      <a href="#list">Romaneios</a>
+      <a href="#clientes">Clientes</a>
+      <a href="#users">Usuários</a>
+      <button id="btnTheme" class="theme">🌙/☀️</button>
+      <!-- Removido o botão "Atualizar app" como solicitado -->
+      <a href="#" id="logout" class="btn-ghost">Sair</a>
+    </nav>
+  </header>
 
-    <div class="card">
-      <h1>🚚 Romaneio</h1>
-      <div id="conn" class="muted">…</div>
+  <div class="container">
+    <div class="card section" id="secRom">
+      <h2>Enviar Romaneio</h2>
 
-      <div class="fld">
-        <label>Usuário</label>
-        <input id="user" placeholder="admin" autocomplete="username"/>
-      </div>
-      <div class="fld">
-        <label>Senha</label>
-        <input id="pass" type="password" placeholder="••••••" autocomplete="current-password"/>
+      <div class="row">
+        <div style="flex:1">
+          <label class="muted">ROM</label>
+          <input id="rom" type="number" placeholder="Ex.: 21">
+        </div>
+        <div style="flex:1">
+          <label class="muted">Data</label>
+          <input id="data" type="date">
+        </div>
       </div>
 
       <div class="row">
-        <button id="btnLogin" class="btn btn-primary">Entrar</button>
-        <button id="btnPing" class="btn">Testar conexão</button>
+        <div style="flex:1">
+          <label class="muted">Obs.</label>
+          <input id="obs" type="text" placeholder="Ex.: Doca 3, até 16h">
+        </div>
       </div>
 
-      <div class="progress" style="display:none" id="prog"><div class="bar" id="bar"></div></div>
-      <div id="msg" class="muted" style="min-height:22px;margin-top:6px"></div>
+      <h3 class="muted">Itens</h3>
+      <div id="itens"></div>
+      <div class="row" style="margin-top:8px">
+        <button id="addItem" class="btn-ghost">+ Adicionar item</button>
+        <span class="muted">Total: <b id="totalQtd">0</b></span>
+      </div>
 
-      <div class="ver">v1.0.5</div>
+      <h3 class="muted" style="margin-top:12px">Fotos</h3>
+      <input id="fotos" type="file" accept="image/*" capture="environment" multiple>
+      <div id="thumbs" class="thumbs"></div>
+
+      <div class="row" style="margin-top:14px">
+        <button id="enviar" class="btn btn-primary">Enviar</button>
+        <button id="limpar" class="btn btn-ghost">Limpar</button>
+      </div>
+
+      <div id="msg" style="display:none"></div>
+    </div>
+
+    <div class="card section">
+      <h2>Romaneios</h2>
+      <p class="muted">Lista/relatórios numa próxima etapa.</p>
     </div>
   </div>
 
 <script>
-const VERSION="v1.0.5";
-/* ====== CONFIG ====== */
+/* ===== CONFIG ===== */
 const API_BASE = "https://script.google.com/macros/s/AKfycbyrDoEP82oJDj2wTIX491414Qf5e-YaDZJHYMAgmWfiddVKCw7WP4oQwrVtEouYxL-NvQ/exec";
 
-/* ====== UI helpers ====== */
-const qs = s=>document.querySelector(s);
-const msg = (t, cls="muted") => { qs("#msg").className=cls; qs("#msg").textContent=t||""; };
-const setConn = (ok, txt) => qs("#conn").innerHTML = ok ? `Conectado • <span class="ok">${txt}</span>` : `<span class="err">${txt}</span>`;
-const prog = (v)=>{ qs("#prog").style.display="block"; qs("#bar").style.width = (v*100).toFixed(0)+"%"; if(v>=1) setTimeout(()=>qs("#prog").style.display="none",350); };
+/* ===== Barra de progresso ===== */
+const bar = document.getElementById('bar');
+function barStart(){ bar.style.width='20%'; let w=20; window._barInt=setInterval(()=>{w=Math.min(95,w+5); bar.style.width=w+'%'},200)}
+function barDone(){ clearInterval(window._barInt); bar.style.width='100%'; setTimeout(()=>bar.style.width='0',300)}
 
-/* ====== THEME ====== */
-(function(){
-  const key="rom_theme";
-  const apply=()=>{ document.documentElement.dataset.theme=localStorage.getItem(key)||"dark"; };
-  apply();
-  qs("#btnTheme").onclick=()=>{ localStorage.setItem(key, (localStorage.getItem(key)==="dark"?"light":"dark")); apply(); };
-  if((localStorage.getItem(key) ?? "dark") === "dark"){
-    document.body.style.background = "linear-gradient(180deg,#0b1320 0%, #0d1528 100%)";
-  }
+/* ===== Tema ===== */
+function setTheme(t){ document.documentElement.setAttribute('data-theme',t); localStorage.setItem('theme',t) }
+(function initTheme(){
+  const saved = localStorage.getItem('theme');
+  if(saved){ setTheme(saved) } else { setTheme(window.matchMedia('(prefers-color-scheme: light)').matches?'light':'dark') }
 })();
+document.getElementById('btnTheme').onclick = ()=> setTheme(document.documentElement.getAttribute('data-theme')==='dark'?'light':'dark');
 
-/* ====== RELOAD ====== */
-qs("#btnReload").onclick=()=>{ location.href = location.pathname + "?v=" + Date.now(); };
-
-/* ====== API ====== */
-async function apiPost(path, data){
-  const r = await fetch(API_BASE + "?path=" + encodeURIComponent(path), {
-    method:"POST", headers:{ "Content-Type":"text/plain;charset=utf-8" },
-    body: JSON.stringify(data||{}), mode:"cors", credentials:"omit",
-  });
-  if(!r.ok) throw new Error("HTTP "+r.status);
-  return await r.json();
+/* ===== Sessão: pega token do hash, LocalStorage ou cookie ===== */
+function getCookie(name){
+  const m = document.cookie.match(new RegExp('(^| )'+name+'=([^;]+)')); return m? decodeURIComponent(m[2]) : null;
+}
+function getTokenFromHash(){
+  const h = location.hash || ''; const m = h.match(/[#&]t=([^&]+)/); return m? decodeURIComponent(m[1]) : null;
 }
 
-/* ====== PING ON LOAD ====== */
-(async()=>{
-  try{
-    await apiPost("/ping", {});
-    setConn(true, new Date().toLocaleString());
-  }catch(e){
-    setConn(false,"Falha ao conectar");
+// index salva como "rom_session"
+function getSession(){
+  let s = null;
+  try{ s = JSON.parse(localStorage.getItem('rom_session')||'null'); }catch(_){}
+  if(!s || !s.token){
+    // fallback: também aceita "session" se por acaso existir
+    try{ s = JSON.parse(localStorage.getItem('session')||'null'); }catch(_){}
   }
-})();
+  // sobrescreve token se veio no hash
+  const tHash = getTokenFromHash();
+  if(!s) s = {};
+  if(tHash) s.token = tHash;
+  // por fim, cookie
+  if(!s.token){ s.token = getCookie('rom_token'); }
+  return s || {};
+}
 
-/* ====== Ações ====== */
-qs("#btnPing").onclick = async ()=>{
-  try{ prog(.2); await apiPost("/ping",{}); prog(1); msg("Conexão OK ✓","ok"); }
-  catch(e){ prog(1); msg("Falha ao conectar","err"); }
+const sess = getSession();
+if(!sess || !sess.token){
+  alert('Sessão inválida. Faça login.');
+  location.href='index.html';
+}
+document.getElementById('who').textContent = (sess.usuario||'') ? `${sess.usuario} · ${(sess.role||'')}` : '';
+
+/* ===== Helpers ===== */
+function showMsg(kind, text){
+  const el = document.getElementById('msg');
+  el.className = 'msg '+(kind==='err'?'err':'ok');
+  el.textContent = text;
+  el.style.display = 'block';
+}
+async function post(path, body={}){
+  barStart();
+  try{
+    const r = await fetch(API_BASE+"?path="+encodeURIComponent(path), {
+      method:'POST',
+      headers:{'Content-Type':'text/plain;charset=utf-8'},
+      body: JSON.stringify({...body, token:sess.token})
+    });
+    barDone();
+    return await r.json();
+  }catch(e){ barDone(); throw e }
+}
+
+/* ===== Logout ===== */
+document.getElementById('logout').onclick = async (e)=>{
+  e.preventDefault();
+  try{ await post('/logout',{}); }catch(_){}
+  // limpa todas as chaves que podemos ter usado
+  localStorage.removeItem('rom_session');
+  localStorage.removeItem('session');
+  document.cookie = "rom_token=; path=/; max-age=0";
+  location.href='index.html';
 };
 
-async function doLogin(){
-  const usuario = qs("#user").value.trim() || "admin";
-  const senha   = qs("#pass").value.trim();
-  if(!senha){ msg("Informe a senha","err"); return; }
-  try{
-    prog(.2);
-    const r = await apiPost("/login",{usuario,senha});
-    prog(.6);
-    if(r.error){ prog(1); msg(r.error,"err"); return; }
+/* ===== Itens ===== */
+const tipos = ['Caixa','Saco','Palete','Outros'];
+const tamanhos = ['P','M','G'];
 
-    // ===== GUARDA SESSÃO =====
-    localStorage.setItem("rom_session", JSON.stringify(r.session));
-    // >>> ACRESCENTEI: disponibiliza o token para o app.html <<<
-    localStorage.setItem("token", r.session.token);                                  // LocalStorage
-    document.cookie = "rom_token="+encodeURIComponent(r.session.token)+"; path=/; max-age=28800"; // 8h
-    // (opcional) também envia no hash
-    prog(1);
-    msg("Login OK. Redirecionando…","ok");
-    location.href = "app.html#t="+encodeURIComponent(r.session.token)+"&v="+Date.now();
-  }catch(e){
-    prog(1); msg("Erro: "+e.message,"err");
+const itensDiv = document.getElementById('itens');
+const totalQtdEl = document.getElementById('totalQtd');
+function somaTotal(){ 
+  let t=0; document.querySelectorAll('.qtd').forEach(i=> t += Number(i.value||0)); 
+  totalQtdEl.textContent = t; 
+}
+function itemRow(){
+  const row = document.createElement('div');
+  row.className='grid';
+
+  const selTipo = document.createElement('select');
+  tipos.forEach(t=>{ const o=document.createElement('option'); o.value=t; o.textContent=t; selTipo.appendChild(o) });
+
+  const selTam = document.createElement('select');
+  tamanhos.forEach(t=>{ const o=document.createElement('option'); o.value=t; o.textContent=t; selTam.appendChild(o) });
+
+  const qtd = document.createElement('input'); qtd.type='number'; qtd.min='1'; qtd.value='1'; qtd.className='qtd'; qtd.oninput=somaTotal;
+
+  const del = document.createElement('button'); del.className='btn btn-danger'; del.textContent='X'; del.onclick=()=>{ row.remove(); somaTotal(); };
+
+  row.appendChild(selTipo); row.appendChild(selTam); row.appendChild(qtd); row.appendChild(del);
+  return row;
+}
+document.getElementById('addItem').onclick = ()=>{ itensDiv.appendChild(itemRow()); somaTotal(); };
+/* cria uma linha por padrão */
+itensDiv.appendChild(itemRow()); somaTotal();
+
+/* ===== Fotos ===== */
+const fileInput = document.getElementById('fotos');
+const thumbs = document.getElementById('thumbs');
+let fotosData = []; // dataURL
+
+fileInput.onchange = async (ev)=>{
+  const files = Array.from(ev.target.files||[]);
+  for(const f of files){
+    if(!f.type.startsWith('image/')) continue;
+    const dataUrl = await fileToDataURL(f);
+    fotosData.push(dataUrl);
   }
+  renderThumbs();
+};
+function renderThumbs(){
+  thumbs.innerHTML='';
+  fotosData.forEach((d,i)=>{
+    const box=document.createElement('div'); box.className='thumb';
+    const img=new Image(); img.src=d; box.appendChild(img);
+    const x=document.createElement('button'); x.textContent='×'; x.onclick=()=>{ fotosData.splice(i,1); renderThumbs(); };
+    box.appendChild(x);
+    thumbs.appendChild(box);
+  });
+}
+function fileToDataURL(file){
+  return new Promise((res,rej)=>{ const r=new FileReader(); r.onload=()=>res(r.result); r.onerror=rej; r.readAsDataURL(file); });
 }
 
-qs("#btnLogin").onclick = doLogin;
-// Enter envia
-qs("#pass").addEventListener("keydown", e=>{ if(e.key==="Enter") doLogin(); });
-qs("#user").addEventListener("keydown", e=>{ if(e.key==="Enter") qs("#pass").focus(); });
+/* ===== Data padrão (hoje) ===== */
+function todayISO(){ const d=new Date(); const tz = new Date(d.getTime()-d.getTimezoneOffset()*60000); return tz.toISOString().slice(0,10) }
+document.getElementById('data').value = todayISO();
 
+/* ===== Botões enviar/limpar ===== */
+document.getElementById('limpar').onclick = ()=>{
+  document.getElementById('rom').value='';
+  document.getElementById('obs').value='';
+  itensDiv.innerHTML=''; itensDiv.appendChild(itemRow()); somaTotal();
+  fileInput.value=''; fotosData=[]; renderThumbs();
+  document.getElementById('msg').style.display='none';
+};
+
+document.getElementById('enviar').onclick = async ()=>{
+  const rom = Number(document.getElementById('rom').value);
+  const data = document.getElementById('data').value;
+  const obs  = document.getElementById('obs').value.trim();
+
+  const itens = [];
+  itensDiv.querySelectorAll('.grid').forEach(row=>{
+    const [t,s,q] = row.querySelectorAll('select, input');
+    const qtd = Number(q.value||0);
+    if(qtd>0) itens.push({tipo:t.value,tamanho:s.value,qtd});
+  });
+
+  if(!rom){ showMsg('err','Informe o número do ROM'); return }
+  if(!itens.length){ showMsg('err','Adicione ao menos um item'); return }
+
+  try{
+    const body = {
+      rom, data, obs,
+      cliente: {tel:'', nome:'', local:''},           // poderá ser preenchido depois
+      fornecedor: {tel:'', nome:'', local:''},        // idem
+      itens,
+      fotos: fotosData.map(d=>({data:d}))
+    };
+    const r = await post('/rom/create', body);
+    if(r.error){ showMsg('err', r.error); return }
+    showMsg('ok', `Enviado! Código: ${r.cod}`);
+    // if(r.pdfUrl) window.open(r.pdfUrl,'_blank'); // opcional abrir PDF
+  }catch(e){
+    showMsg('err','Erro de rede: '+e);
+  }
+};
 </script>
 </body>
 </html>
